--- a/server/assets/css/connected.css
+++ b/server/assets/css/connected.css
@@ -2,6 +2,11 @@
     width: 100%;
 }
 
+h1.dick-name {
+    margin: 0;
+    padding: 0;
+}
+
 .container .wrapper{
     width: 300px;
     margin: 0 auto;
@@ -15,7 +20,7 @@
 }
 
 img.penis {
-    bottom: -5px;
+    bottom: -40px;
     position: absolute;
     display: block;
     width: 170px;
