--- a/server/assets/css/app.css
+++ b/server/assets/css/app.css
@@ -11,9 +11,11 @@ html, body {
     margin: 0px;
     padding: 0px;
     border: 0px;
+    height: 100%;
 }
 
 body {
+    height: 100%;
     background-color: #add7cd;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
