--- a/server/assets/css/connected.css
+++ b/server/assets/css/connected.css
@@ -20,14 +20,14 @@ h1.dick-name {
 }
 
 .penis {
-    bottom: 0;
+    bottom: 0px;
     position: absolute;
     display: block;
     width: 170px;
     cursor: pointer;
     background: url('../img/penis.svg') no-repeat;
     width: 170px;
-    height: 398px;
+    height: 300px;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -35,6 +35,8 @@ h1.dick-name {
     -ms-user-select: none;
     user-select: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    overflow-y: hidden;
+    -webkit-transform: translate3d(0,0,0);
 }
 
 img.penis:hover {
@@ -51,6 +53,7 @@ img.penis:hover {
     margin: 0 auto;
     width: 44px;
     top: 0;
+    -webkit-transform: translate3d(0,0,0);
 }
 
 .dick-name {
