--- a/server/assets/css/connected.css
+++ b/server/assets/css/connected.css
@@ -230,10 +230,27 @@ img.penis:hover {
 }
 
 .logout {
-    display: inline-block;
+    display: block;
     position: absolute;
     top: 0;
     right: 10px;
     font-size: 30px;
     color: #fff;
+    background: none repeat scroll 0 0 transparent;
+    border: medium none;
+    border-spacing: 0;
+}
+#logout_form {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 30px;
+    color: #fff;
+    background: none repeat scroll 0 0 transparent;
+    border: medium none;
+    border-spacing: 0;
+}
+.hidden {
+    display: none ;
 }
